refactored tests and class to take a List.of()